# metasc3

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  scratch_trace_reward.py
cascadeenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py  env.py  main.py  models.py  requirements.txt  state.py
server/graders/: __init__.py  base.py  task1_grader.py  task2_grader.py  task3_grader.py
server/scenarios/: __init__.py  generator.py  task1_scenario.py  task2_scenario.py  task3_scenario.py
server/simulator/: __init__.py  behavior.py  graph.py  spread.py
tests/: test_env.py  test_graders.py  test_scenarios.py
