[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascadeenv"
version = "1.0.0"
description = "Moderation gym on synthetic social graphs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "networkx>=3.3",
    "numpy>=1.26.4",
    "httpx>=0.27.0",
    "openai>=2.7.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.1.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
